@@ -1,5 +1,34 @@
+//
+// ********************************************************************
+// * DISCLAIMER                                                       *
+// *                                                                  *
+// * The following disclaimer summarizes all the specific disclaimers *
+// * of contributors to this software. The specific disclaimers,which *
+// * govern, are listed with their locations in:                      *
+// *   http://cern.ch/geant4/license                                  *
+// *                                                                  *
+// * Neither the authors of this software system, nor their employing *
+// * institutes,nor the agencies providing financial support for this *
+// * work  make  any representation or  warranty, express or implied, *
+// * regarding  this  software system or assume any liability for its *
+// * use.                                                             *
+// *                                                                  *
+// * This  code  implementation is the  intellectual property  of the *
+// * GEANT4 collaboration.                                            *
+// * By copying,  distributing  or modifying the Program (or any work *
+// * based  on  the Program)  you indicate  your  acceptance of  this *
+// * statement, and all its terms.                                    *
+// ********************************************************************
+//
+//
+// $Id: G4VWeightWindowAlgorithm.hh,v 1.2 2002-05-30 16:00:55 dressel Exp $
+// GEANT4 tag $Name: not supported by cvs2svn $
+//
 // ----------------------------------------------------------------------
 // Class G4VWeightWindowAlgorithm
+//
+// Class description:
+// 
 // This is a base class for an algorithm used for 
 // weight window importance sampling. It calculates
 // the new weight of particles and the number of copies
@@ -7,7 +36,6 @@
 // of the track and the importance of the cell. The window
 // is defined by the values of Upper and Lower.
 // 
-// Class description:
 //
 
 // Author: Michael Dressel (Michael.Dressel@cern.ch)
