@@ -1,4 +1,4 @@
-$Id: History,v 1.7 2002-05-29 15:54:37 dressel Exp $
+$Id: History,v 1.8 2002-05-30 16:00:55 dressel Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+May, 30th, 2002  M.Dressel
+- change comments in WeightWindowAlgorithm
 
 May, 24th, 2002  M.Dressel - internal-1-geombias-V04-00-02
 - Added classes for weight window biasing. 
